--- a/index.html
+++ b/index.html
@@ -9,193 +9,234 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="header-logo-accent">Studio</span>
-        </a>
-        <ul>
-          <li><a href="./index.html" class="header-nav">Studio</a></li>
-          <li><a href="" class="header-nav">Portfolio</a></li>
-          <li><a href="" class="header-nav">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-item"
-              >info@devstudio.com
-            </a>
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-item"
-              >+11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="nav-header">
+          <a href="./index.html" class="logo"
+            >Web<span class="header-logo-accent">Studio</span>
+          </a>
+          <ul class="list-header">
+            <li><a href="./index.html" class="header-nav">Studio</a></li>
+            <li><a href="" class="header-nav">Portfolio</a></li>
+            <li><a href="" class="header-nav">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-item"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-item"
+                >+11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+      <section class="section-hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
-      <section>
-        <h2 class="section-title">Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="section-heading">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-heading">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-heading">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-heading">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section-advantages">
+        <div class="container">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="section-heading advantages">Strategy</h3>
+              <p class="section-text advantages">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="section-heading advantages">Punctuality</h3>
+              <p class="section-text advantages">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="section-heading advantages">Diligence</h3>
+              <p class="section-text advantages">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="section-heading advantages">Technologies</h3>
+              <p class="section-text advantages">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul>
-          <li class="team-item">
-            <img
-              src="./images/img-mark.jpg"
-              alt="Photo Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-tom.jpg"
-              alt="Photo Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-camila.jpg"
-              alt="Photo of a Marketer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-daniel.jpg"
-              alt="Photo UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section-team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="our-team">
+            <li class="team-item">
+              <img
+                src="./images/img-mark.jpg"
+                alt="Photo Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="content-team">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-tom.jpg"
+                alt="Photo Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="content-team">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-camila.jpg"
+                alt="Photo of a Marketer"
+                width="264"
+                height="260"
+              />
+              <div class="content-team">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-daniel.jpg"
+                alt="Photo UI Designer"
+                width="264"
+                height="260"
+              />
+              <div class="content-team">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img-app1.jpg"
-              alt="Photo Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-heading">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-marketing1.jpg"
-              alt="Photo of cashless payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-heading">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-app2.jpg"
-              alt="Photo Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-heading">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-marketing2.jpg"
-              alt="Photo Taxi"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-heading">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-design.jpg"
-              alt="Photo Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-heading">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-marketing3.jpg"
-              alt="Photo of a happy girl"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-heading">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="section-portfolio">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="our-portfolio">
+            <li class="portfolio-list">
+              <img
+                src="./images/img-app1.jpg"
+                alt="Photo Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item">
+                <h3 class="section-heading">Banking App</h3>
+                <p class="section-text">App</p>
+              </div>
+            </li class="portfolio-list">
+            <li>
+              <img
+                src="./images/img-marketing1.jpg"
+                alt="Photo of cashless payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item">
+                <h3 class="section-heading">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list">
+              <img
+                src="./images/img-app2.jpg"
+                alt="Photo Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item">
+                <h3 class="section-heading">Meditation App</h3>
+                <p class="section-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list">
+              <img
+                src="./images/img-marketing2.jpg"
+                alt="Photo Taxi"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item">
+                <h3 class="section-heading">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list">
+              <img
+                src="./images/img-design.jpg"
+                alt="Photo Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item">
+                <h3 class="section-heading">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list">
+              <img
+                src="./images/img-marketing3.jpg"
+                alt="Photo of a happy girl"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item">
+                <h3 class="section-heading">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="footer-logo-accent">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="fotter-cnt">
+          <a href="./index.html" class="logo"
+            >Web<span class="footer-logo-accent">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
