--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="page-header">
       <div class="container header-container">
         <nav class="nav-header">
-          <a href="./index.html" class="logo"
+          <a href="./index.html" class="logo header-logo"
             >Web<span class="header-logo-accent">Studio</span>
           </a>
           <ul class="list-header">
@@ -160,8 +160,8 @@
                 <h3 class="section-heading">Banking App</h3>
                 <p class="section-text">App</p>
               </div>
-            </li class="portfolio-list">
-            <li>
+            </li>
+            <li class="portfolio-list">
               <img
                 src="./images/img-marketing1.jpg"
                 alt="Photo of cashless payment"
@@ -227,15 +227,13 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="fotter-cnt">
-          <a href="./index.html" class="logo"
-            >Web<span class="footer-logo-accent">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a href="./index.html" class="logo footer-logo"
+          >Web<span class="footer-logo-accent">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
